test: avoid deprecated URL constructor